--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APPIE_API_HOST=""
+APPIE_X_DYNATRACE=""
+APPIE_X_APPLICATION=""
+APPIE_USER_AGENT=""
+APPIE_CONTENT_TYPE=""
