chore(build): added the mollie-laravel integration for payments

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,8 @@ APPIE_X_DYNATRACE=""
 APPIE_X_APPLICATION=""
 APPIE_USER_AGENT=""
 APPIE_CONTENT_TYPE=""
+
+MOLLIE_KEY=test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+WWWGROUP=1000
+WWWUSER=1000
